--- a/README.Rmd
+++ b/README.Rmd
@@ -43,6 +43,37 @@ library(honos)
 ## basic example code
 ```
 
+
+## Datasets
+
+The package comes with a simulated datasets of HoNOS scores (13-items) that is available in "long" as well as "wide" format.
+
+### Long format
+
+- `id`: Unique identifier 
+- `date`: Date variable
+- `measure`: Description of measure
+- `item`: Number of HoNOS item
+- `value`: HoNOS score
+
+```{r}
+honos_long %>% 
+  dplyr::filter(id %in% paste0("id", 1:5))
+```
+
+### Wide format
+
+- `id`: Unique identifier 
+- `date`: Date variable
+- `measure`: Description of measure
+- `honos_i1` to `honos_i13`: HoNOS score for each item
+
+```{r}
+honos_wide %>% 
+  dplyr::filter(id %in% paste0("id", 1:5))
+```
+
+
 ## Resources
 
 - https://www.rcpsych.ac.uk/events/in-house-training/health-of-nation-outcome-scales
