--- a/README.Rmd
+++ b/README.Rmd
@@ -34,22 +34,18 @@ You can install the development version from [GitHub](https://github.com/) with:
 devtools::install_github("CDU-data-science-team/honos")
 ```
 
-## Example
-
-This is a basic example which shows you how to solve a common problem:
+## Examples
 
 ```{r example}
 library(honos)
-library(tidyverse)
-## basic example code
+# library(tidyverse)
 ```
 
-
-## Datasets
+### Datasets
 
 The package comes with a simulated datasets of HoNOS scores (13-items) that is available in "long" as well as "wide" format.
 
-### Long format
+#### Long format
 
 - `id`: Unique identifier 
 - `date`: Date variable
@@ -58,11 +54,12 @@ The package comes with a simulated datasets of HoNOS scores (13-items) that is a
 - `value`: HoNOS score
 
 ```{r}
+# Show fist 5 ids
 honos_long %>% 
   dplyr::filter(id %in% paste0("id", 1:5))
 ```
 
-### Wide format
+#### Wide format
 
 - `id`: Unique identifier 
 - `date`: Date variable
@@ -70,34 +67,39 @@ honos_long %>%
 - `honos_i1` to `honos_i13`: HoNOS score for each item
 
 ```{r}
+# Show fist 5 ids
 honos_wide %>% 
   dplyr::filter(id %in% paste0("id", 1:5))
 ```
 
-```{r}
+#### Tidy HoNOS data
 
-
-honos_wide %>% 
-  rename(client_id = id, assessment_date = date) %>% 
-  honos::lag_honos(id_var = client_id, date_var = assessment_date, change_label = "deterio_improve")
-
-
-```
-
-
-## Tidy HoNOS data
-
-- `as_item_desc()`: Add item descriptions
-- `as_severity_desc()`: Add severity descriptions
+- `as_item_desc()`: Add item descriptions (Fot 13 and 18 item versions of the HoNOS)
+- `as_severity_desc()`: Add severity descriptions (Values '0' to '4')
+- `as_i8_desc()`: Add description for item 8 types (Type 'A' to 'J')
 
 ```{r}
 
 honos_long %>% 
-  mutate(item_desc = as_item_desc(item, n_items = 13)) %>% 
-  mutate(value = as_severity_desc(value, na_level = "I AM A MISSING VALUE"))
+  dplyr::mutate(item_desc = as_item_desc(item, n_items = 13)) %>% 
+  dplyr::mutate(value = as_severity_desc(value, na_level = "I AM A MISSING VALUE"))
 
 ```
 
+#### Calculate lagged scores
+
+- `lag_honos()`: Calculate lagged scores based on a date variable and calculate change labels (e.g., "high to low", or 'deterioration')
+- `as_change_label()`: Creates change labels for repeated measures of the HoNOS. This is an optional argument in the `lag_honos()` function or can be used separately
+
+```{r}
+
+honos_wide %>% 
+  dplyr::rename(client_id = id, assessment_date = date) %>% 
+  honos::lag_honos(id_var = client_id, 
+                   date_var = assessment_date, 
+                   change_label = "deterio_improve")
+
+```
 
 ## Resources
 
