--- a/README.Rmd
+++ b/README.Rmd
@@ -34,72 +34,22 @@ You can install the development version from [GitHub](https://github.com/) with:
 devtools::install_github("CDU-data-science-team/honos")
 ```
 
-## Examples
+## Functions
 
-```{r example}
-library(honos)
-# library(tidyverse)
-```
+See vignettes for further information.
 
-### Datasets
+#### Add labels for HoNOS items
 
-The package comes with a simulated datasets of HoNOS scores (13-items) that is available in "long" as well as "wide" format.
+- `as_item_desc()`: Add item descriptions (For 13 and 18 item versions of the HoNOS)
 
-#### Long format
+#### Add labels for HoNOS severity ratings
 
-- `id`: Unique identifier 
-- `date`: Date variable
-- `measure`: Description of measure
-- `item`: Number of HoNOS item
-- `value`: HoNOS score
-
-```{r}
-# Show fist 5 ids
-honos_long %>% 
-  dplyr::filter(id %in% paste0("id", 1:5))
-```
-
-#### Wide format
-
-- `id`: Unique identifier 
-- `date`: Date variable
-- `measure`: Description of measure
-- `honos_i1` to `honos_i13`: HoNOS score for each item
-
-```{r}
-# Show fist 5 ids
-honos_wide %>% 
-  dplyr::filter(id %in% paste0("id", 1:5))
-```
-
-#### Tidy HoNOS data
-
-- `as_item_desc()`: Add item descriptions (Fot 13 and 18 item versions of the HoNOS)
 - `as_severity_desc()`: Add severity descriptions (Values '0' to '4')
-- `as_i8_desc()`: Add description for item 8 types (Type 'A' to 'J')
 
-```{r}
-
-honos_long %>% 
-  dplyr::mutate(item_desc = as_item_desc(item, n_items = 13)) %>% 
-  dplyr::mutate(value = as_severity_desc(value, na_level = "I AM A MISSING VALUE"))
-
-```
-
-#### Calculate lagged scores
+#### Calculate lagged HoNOS scores
 
 - `lag_honos()`: Calculate lagged scores based on a date variable and calculate change labels (e.g., "high to low", or 'deterioration')
 - `as_change_label()`: Creates change labels for repeated measures of the HoNOS. This is an optional argument in the `lag_honos()` function or can be used separately
-
-```{r}
-
-honos_wide %>% 
-  dplyr::rename(client_id = id, assessment_date = date) %>% 
-  honos::lag_honos(id_var = client_id, 
-                   date_var = assessment_date, 
-                   change_label = "deterio_improve")
-
-```
 
 ## Resources
 
@@ -107,5 +57,8 @@ honos_wide %>%
 - https://www.rcpsych.ac.uk/events/in-house-training/health-of-nation-outcome-scales
 - https://www.nhs.uk/Scorecard/Pages/IndicatorFacts.aspx?MetricId=9308
 - https://www.healthylondon.org/resource/mental-health-in-integrated-care-systems/outcome-measures/honos/
+- https://bmjopen.bmj.com/content/6/4/e010732
+- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5914766/
+- https://www.healthylondon.org/wp-content/uploads/2017/11/Clinical-engagement-with-HoNOS-REPORT-NOV-2018-FINAL.pdf
 
 ## References
