add fucntion to calculate subscales

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,12 +31,17 @@ You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("CDU-data-science-team/honos")
+devtools::install_github("CDU-data-science-team/honos", build_vignettes = TRUE)
 ```
 
 ## Functions
 
 See vignettes for further information.
+
+```{r}
+browseVignettes(package = "honos")
+```
+
 
 #### Add labels for HoNOS items
 
