take honos out of function name, update readme and site

--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,7 @@ The vignettes are also available at https://cdu-data-science-team.github.io/hono
 
 - `lag_honos()`: Calculate lagged scores based on a date variable and calculate change labels (e.g., "high to low", or 'deterioration')
 - `calc_change_label()`: Calculates change labels for repeated measures of the HoNOS
-- `calc_honos_subscales()`: Calculates sums of HoNOS subscales
+- `calc_subscales()`: Calculates sums of HoNOS subscales
 
 ## Resources
 
