add example structure how to implement short labels

--- a/vignettes/describe_honos.Rmd
+++ b/vignettes/describe_honos.Rmd
@@ -43,3 +43,16 @@ honos_longish %>%
   dplyr::mutate(value = as_severity_desc(value))
 
 ```
+
+## Compare short and long labels
+
+```{r}
+honos_longish %>% 
+  dplyr::mutate(value = as_severity_desc(value, short_labels = TRUE))
+```
+
+```{r}
+honos_longish %>% 
+  dplyr::mutate(value = as_severity_desc(value, short_labels = FALSE))
+```
+
