Updated contact details and README from devtools to remotes

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,8 +30,8 @@ The goal of the `honos` R package is to assist with the analysis and visualisati
 You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("CDU-data-science-team/honos", build_vignettes = TRUE)
+# install.packages("remotes")
+remotes::install_github("CDU-data-science-team/honos", build_vignettes = TRUE)
 ```
 
 ## Functions
